sfdx-source/force-app/main/default/objects/Mx_Order_History__c/Mx_Order_History__c.object-meta.xml
<CustomObject>
    <description>LEM-15592: Object supports checkpoints and photoshoot history.</description>
    <label>Mx Order History</label>
    <nameField>
        <displayFormat>MXH-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mx Order History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>