sfdx-source/force-app/main/default/objects/Mx_Order_History__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>LEM-15592: Store tracking description details.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>