sfdx-source/force-app/main/default/objects/Mx_Order_History__c/fields/Merchant_Order__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-15592: - Merchant Order Lookup</description>
    <label>Merchant Order</label>
    <referenceTo>MX_Order__c</referenceTo>
    <relationshipLabel>Mx Order History</relationshipLabel>
    <relationshipName>Mx_Order_History</relationshipName>
    <type>Lookup</type>
</CustomField>