sfdx-source/force-app/main/default/objects/Mx_Order_History__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>LEM-15592: Checkpoints and Photoshoot History Type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkpoints</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>PhotoShoot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>